src/test/deca/context/invalid/oracle/use_var_not_decl_with_geq_left.deca
{
    bool x;
    x = y <= 2;
}